--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,12 +1,20 @@
 {% extends 'base.html' %} {% block content %}
-<h2>{{page_title}}</h2>
+<h2>{{ page_title }}</h2>
+
 <div class="row">
   <div class="col-lg-8 col-md-10 mx-auto">
+    {% with messages = get_flashed_messages() %} {% if messages %}
+    <ul class="flashes">
+      {% for message in messages %}
+      <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %} {% endwith %}
     <p>
       Want to get in touch? Fill out the form below to send me a message and I
       will get back to you as soon as possible!
     </p>
-    <form name="sentMessage" id="contactForm" novalidate>
+    <form method="POST" name="sentMessage" id="contactForm" novalidate>
       <div class="control-group">
         <div class="form-group floating-label-form-group controls">
           <label>Name</label>
@@ -14,6 +22,7 @@
             type="text"
             class="form-control"
             placeholder="Name"
+            name="name"
             id="name"
             required
             data-validation-required-message="Please enter your name."
@@ -28,6 +37,7 @@
             type="email"
             class="form-control"
             placeholder="Email Address"
+            name="email"
             id="email"
             required
             data-validation-required-message="Please enter your email address."
@@ -42,6 +52,7 @@
             type="tel"
             class="form-control"
             placeholder="Phone Number"
+            name="phone"
             id="phone"
             required
             data-validation-required-message="Please enter your phone number."
@@ -56,6 +67,7 @@
             rows="5"
             class="form-control"
             placeholder="Message"
+            name="message"
             id="message"
             required
             data-validation-required-message="Please enter a message."
